<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BattleSim</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome to Battle Sim!</string>
    <string name="menu_character">Character</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_login">Login</string>
    <string name="title_activity_logger">Logger</string>
    <string name="menu_signup">Sign Up</string>
    <string name="login_email">E-mail Address</string>
    <string name="login_pass">Password</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome">Welcome to the game! Please make a character</string>
    <string name="menu_fb">Login through Facebook</string>
    <string name="menu_createChar">Create Character</string>
    <string name="welcome_back">Glad to see you again!</string>
    <string name="menu_deleteChar">Delete Character</string>
    <string name="menu_logout">Log out</string>
    <string name="title_activity_character_create">CharacterCreate</string>
    <string name="create_name">Name:</string>
    <string name="create_str">Strength:</string>
    <string name="create_agi">Agility:</string>
    <string name="create_def">Defense:</string>
    <string name="create_submit">Submit</string>
    <string name="title_activity_training">TrainingActivity</string>
    <string name="train_energy">Energy:</string>
    <string name="train_more_energy">More energy in:</string>
    <string name="menu_train">Train</string>
    <string name="train_refill_time">Energy full!</string>
    <string name="train_weights">Lift Weights</string>
    <string name="train_laps">Run Laps</string>
    <string name="train_dodgeball">Play DodgeBall</string>
    <string name="class_warrior">Warrior</string>
    <string name="class_rogue">Rogue</string>
    <string name="class_healer">Healer</string>
    <string name="menu_stats">Stats</string>
    <string name="title_activity_skills">SkillsActivity</string>
    <string name="title_activity_stat">Stats</string>
    <string name="title_activity_ad">AdActivity</string>

</resources>
